--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,10 +21,29 @@
 body {
   font-family: 'Josefin Sans', sans-serif;
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  
+}
+.big-title {
+  width: 1200px;
+  font-size:30px;
+  margin:20px 0 30px 0;
+}
+.containter {
+  margin:auto;
+  position: relative;
+
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-wrap:wrap;
+  align-content:flex-start;
+  width: 1000px;
+  gap:20px;
+  padding:20px;
+ }
+ .loading {
+  font-size:25px
+ }
+ .arrow {
+  display: inline-block;
+  transition: 0.3s;
 }
